--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ng-select/ng-select": "^10.0.1",
+    "@popperjs/core": "^2.10.2",
     "@videogular/ngx-videogular": "^6.0.0",
     "bootstrap": "^5.2.2",
     "rxjs": "~7.5.0",
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@angular/localize": "^14.2.0",
     "@types/core-js": "^2.5.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
